--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vigor appremendise</title>
+    <title>A Brief Introduction Of Chidinma Ifeanyi</title>
 </head>
 <body>
-    <header></header>
-    <main>
-        <section></section>
-    </main>
-    <footer></footer>
+    <h1>WHAT TO KNOW ABOUT ME </h1>
+    <h2>I am <b>Chidinma Ifeanyi</b>, an aspiring web developer, passionate about crafting digital experiences that captivate  and inspire. As a newbie to the world of  web development, I am constantly exploring new technologies and honing my sklls to bring creative ideas to live. From designing elegant user interfaces to delving into intricases of front end development, I am on a trip to change my fascination with web development into impactful projects. Join me as I journey on this wonderfull adventure, where every line of code is a previlege to learn and innovate</h2>
+    <h3>I am a Nigerian citizen, basically from Enugu state, grew in Lagos, had MY uni degree in Enugu,work in Enugu while awaiting for my NYSC. </h3>
+    <h4>In the Upskill Tech Program, I am enthusiastic about expanding my skill set and deepening my understanding of various aspects of web development. Specifically, I aim to:<br> Master Frontend Development: Delve into advanced techniques of HTML, CSS, and JavaScript to create responsive and visually stunning websites. Stay Current with Industry Trends: Keep abreast of the latest trends, best practices, and emerging technologies in web development through continuous learning and engagement with the vibrant tech community Through the Upskill Tech Program, I am excited to push my boundaries, collaborate with fellow enthusiasts, and ultimately, transform my passion for web development into a rewarding career.</h4>
 </body>
 </html>
